# langchain-turboquant

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
examples/: rag_demo.py
src/langchain_turboquant/: __init__.py  lloyd_max.py  quantizer.py  vectorstore.py
tests/: test_edge_cases.py  test_math_stress.py  test_persistence.py  test_quantizer.py  test_recall_extensive.py  test_rigorous.py  test_vectorstore.py
