[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "langchain-turboquant"
version = "0.1.0"
description = "TurboQuant vector store for LangChain — 6x memory reduction with training-free quantization"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "TurboQuant Contributors" },
]
keywords = ["langchain", "vector-store", "quantization", "turboquant", "rag", "compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy >= 1.21",
    "scipy >= 1.7",
    "langchain-core >= 0.3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
demo = ["langchain-openai", "langchain-community", "langchain-huggingface"]

[project.urls]
Homepage = "https://github.com/wjddusrb03/langchain-turboquant"
Repository = "https://github.com/wjddusrb03/langchain-turboquant"
Issues = "https://github.com/wjddusrb03/langchain-turboquant/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_turboquant"]

[tool.ruff]
line-length = 100
